# pyper

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: pr-check.yaml
pyper/: __init__.py
pyper/core/: __init__.py  base.py  pipe.py  stage.py
pyper/sink/: __init__.py  base.py  bigquery.py
pyper/source/: __init__.py  base.py  bigquery.py  local.py
pyper/task/: __init__.py  base.py  map.py
tests/: conftest.py  test_pipe.py
